--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="featured-section">
             <div class="feature-text">
-                <h3>Our Featured Flowers</h3>
+                <h3 class="section-title">Our Featured Flowers</h3>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
             <div class="featured-images">
@@ -56,9 +56,49 @@
             </div>
 
         </section>
+
+        <section class="hot-deal-section">
+            <div class="hot-deal-text">
+                <h3 class="section-title">Hot Deal ! Sale Up To 25% <span class="flowerSpan"> Off</span></h3>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <button class="shop-now-btn">Shop Now</button>
+        </div>
+            <div class="hot-deal-image">
+                <img src="/images/sale-0ff.png" alt="">
+            </div>
+            
+        </section>
+
+        <section class="instagram-section">
+            <div class="instagram-text">
+                <h3 class="section-title">Instagram</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="instagram-images">
+                <div><img src="/images/insta1.png" alt=""></div>
+                <div><img src="/images/insta2.png" alt=""></div>
+                <div><img src="/images/insta3.png" alt=""></div>
+                <div><img src="/images/insta4.png" alt=""></div>
+                <div><img src="/images/insta1.png" alt=""></div>
+                <div><img src="/images/insta2.png" alt=""></div>
+                <div><img src="/images/insta3.png" alt=""></div>
+                <div><img src="/images/insta4.png" alt=""></div>
+                <div><img src="/images/insta4.png" alt=""></div>
+                
+                <!-- <img src="/images/insta1.png" alt="">
+                <img src="/images/insta2.png" alt="">
+                <img src="/images/insta3.png" alt="">
+                <img src="/images/insta4.png" alt="">
+                <img src="/images/insta2.png" alt="">
+                <img src="/images/insta1.png" alt="">
+                <img src="/images/insta4.png" alt="">
+                <img src="/images/insta3.png" alt=""> -->
+            </div>
+        </section>
     </main>
 
     <footer>
+
         <h2><span class="flowerSpan">Flower</span>Shop</h2>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         <small>@2020-2023, FlowerShop.com. All rights reserved. </small>
