links are renew

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower shop</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="banner-image">
-                <img src="/images/banner-image.png" alt="">
+                <img src="../images/banner-image.png" alt="">
             </div>
         </div>
     </header>
@@ -29,9 +29,9 @@
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
             <div class="featured-images">
-                <img id="feature-img-1" class="image-border" src="/images/featured1.png" alt="">
-                <img id="feature-img-2" class="image-border" src="/images/featured2.png" alt="">
-                <img id="feature-img-3" class="image-border" src="/images/featured3.png" alt="">
+                <img id="feature-img-1" class="image-border" src="../images/featured1.png" alt="">
+                <img id="feature-img-2" class="image-border" src="../images/featured2.png" alt="">
+                <img id="feature-img-3" class="image-border" src="../images/featured3.png" alt="">
             </div>
             <!-- <div class="featured-images">
                 <div><img src="/images/featured1.png" alt=""></div>
@@ -43,15 +43,15 @@
 
         <section class="service-section">
             <div>
-                <img src="/images/Group 57.png" alt="">
+                <img src="../images/Group 57.png" alt="">
                 <p>Same Day Delivery. Click & Collect.</p>
             </div>
             <div>
-                <img src="/images/Group 58.png" alt="">
+                <img src="../images/Group 58.png" alt="">
                 <p>Fresh Flowers. Local Growers.</p>
             </div>
             <div>
-                <img src="/images/Group 59.png" alt="">
+                <img src="../images/Group 59.png" alt="">
                 <p>24/7 Free Support.</p>
             </div>
 
@@ -64,7 +64,7 @@
             <button class="shop-now-btn">Shop Now</button>
         </div>
             <div class="hot-deal-image">
-                <img src="/images/sale-0ff.png" alt="">
+                <img src="../images/sale-0ff.png" alt="">
             </div>
             
         </section>
@@ -75,15 +75,15 @@
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
             <div class="instagram-images">
-                <div><img src="/images/insta1.png" alt=""></div>
-                <div><img src="/images/insta2.png" alt=""></div>
-                <div><img src="/images/insta3.png" alt=""></div>
-                <div><img src="/images/insta4.png" alt=""></div>
-                <div><img src="/images/insta1.png" alt=""></div>
-                <div><img src="/images/insta2.png" alt=""></div>
-                <div><img src="/images/insta3.png" alt=""></div>
-                <div><img src="/images/insta4.png" alt=""></div>
-                <div><img src="/images/insta1.png" alt=""></div>
+                <div><img src="../images/insta1.png" alt=""></div>
+                <div><img src="../images/insta2.png" alt=""></div>
+                <div><img src="../images/insta3.png" alt=""></div>
+                <div><img src="../images/insta4.png" alt=""></div>
+                <div><img src="../images/insta1.png" alt=""></div>
+                <div><img src="../images/insta2.png" alt=""></div>
+                <div><img src="../images/insta3.png" alt=""></div>
+                <div><img src="../images/insta4.png" alt=""></div>
+                <div><img src="../images/insta1.png" alt=""></div>
                 
                 <!-- <img src="/images/insta1.png" alt="">
                 <img src="/images/insta2.png" alt="">
